# rp2040_gps

./: .gitignore  CMakeLists.txt  README.md  rp2040-freertos-template-main_.code-workspace
src/: CMakeLists.txt  FreeRTOSConfig.h  __FreeRTOSConfig.h  main.c  massivs.h  memory.x  sha256.c  sha256.h  uart_rx.pio  uart_rx.pio.h  ws2812.pio
src/OSSL/include/openssl/: configuration.h
src/OSSL/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/include/: Makefile  cmake_install.cmake
src/lib/cmake/MbedTLS/: MbedTLSTargets-noconfig.cmake  MbedTLSTargets.cmake
tools/: check_hash_sign.py
